--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -156,10 +156,12 @@
                 </Grid.ColumnDefinitions>
                 <Grid Grid.Column="0">
 
-                    <Rectangle Width="800" Height="150" Fill="ForestGreen" Margin="0,-300,0,0"/>
-                    <Rectangle Width="90" Height="80" Fill="Black" Margin="0,-300,0,0"/>
-                    <Rectangle Width="150" Height="350" Fill="ForestGreen" Margin="-600,200,0,0"/>
-
+                    <Rectangle Width="900" Height="150" Fill="ForestGreen" Margin="0,-350,0,0"/>
+                    <Rectangle Width="90" Height="80" Fill="Black" Margin="0,-350,0,0"/>
+                    <Rectangle Width="150" Height="350" Fill="ForestGreen" Margin="-690,150,0,0"/>
+                    <Rectangle Width="30" Height="60" Fill="Orange" Margin="-150,-120,0,0"/>
+                    <Rectangle Width="30" Height="60" Fill="Orange" Margin="350,-120,0,0"/>
+                    <Rectangle Width="60" Height="30" Fill="Orange" Margin="-450,100,0,0"/>
                 </Grid>
                 <Grid Grid.Column="1" >
                     <Grid.RowDefinitions>
@@ -167,16 +169,31 @@
                         <RowDefinition Height="3*"/>
                     </Grid.RowDefinitions>
                     <Grid Grid.Row="0"  Background="#0000">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="1*"/>
-                            <ColumnDefinition Width="1*"/>
-                        </Grid.ColumnDefinitions>
-                        <Grid Grid.Column="0">
-                            <StackPanel>
-                                <!--vị trí hiển thị các chỉ số hiện tại-->
-                                
-                            </StackPanel>
-                        </Grid>
+                        <GroupBox Header="Kết quả vận hành trong ngày" BorderBrush="Aquamarine" Background="{x:Null}" >
+                            <!--<Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1*"/>
+                                <ColumnDefinition Width="1*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid Grid.Column="0">
+
+                                <StackPanel>
+                                    -->
+                            <!--vị trí hiển thị các chỉ số hiện tại-->
+                            <!--
+
+                                    <TextBlock Height="30" VerticalAlignment="Bottom" Margin="0,10,10,0" FontSize="14"
+                                                   Text="Tên hiển thị (*)" HorizontalAlignment="Left" FontWeight="Bold"/>
+                                    <TextBlock Height="30" VerticalAlignment="Bottom" Margin="0,10,10,0" FontSize="14"
+                                                   Text="Tên hiển thị (*)" HorizontalAlignment="Left" FontWeight="Bold"/>
+                                    <TextBlock Height="30" VerticalAlignment="Bottom" Margin="0,10,10,0" FontSize="14"
+                                                   Text="Tên hiển thị (*)" HorizontalAlignment="Left" FontWeight="Bold"/>
+                                    <TextBlock Height="30" VerticalAlignment="Bottom" Margin="0,10,10,0" FontSize="14"
+                                                   Text="Tên hiển thị (*)" HorizontalAlignment="Left" FontWeight="Bold"/>
+
+                                </StackPanel>
+
+                            </Grid>-->
+                        </GroupBox>
                     </Grid>
                     <Grid Grid.Row="1"  Background="#566895">
                         <StackPanel>
