--- a/wdHistory.xaml
+++ b/wdHistory.xaml
@@ -12,8 +12,8 @@
         TextOptions.TextRenderingMode="Auto"
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}"  
-        mc:Ignorable="d" Loaded="Window_Loaded"
-        Title="Lịch sử vận hành hệ thống" Height="450" Width="800">
+        mc:Ignorable="d" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen"
+        Title="Lịch sử vận hành hệ thống" Height="600" Width="1000">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="0.2*"/>
@@ -24,7 +24,7 @@
             <DataGrid x:Name="grdHistory"/>
         </Grid>
         <Grid Grid.Row="2">
-            <Button x:Name="btnExportExCell" Width="110" 
+            <Button x:Name="btnExportExCell" Width="110" BorderBrush="Black" 
                     HorizontalAlignment="Right" Margin="0,0,10,0"
                     Click="btnExportExCell_Click"  Background="LightBlue"/>
             <md:PackIcon Kind="FileExcel" Width="25" Height="25" VerticalAlignment="Center" 
