--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -151,7 +151,7 @@
                 </Grid>
                 <Grid Grid.Column="1" >
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="3*"/>
+                        <RowDefinition Height="2.5*"/>
                         <RowDefinition Height="3*"/>
                     </Grid.RowDefinitions>
                     <Grid Grid.Row="0"  Background="Coral">
@@ -159,11 +159,6 @@
                         <StackPanel>
 
                             <Image Name="feedImage" Grid.Row="0" Grid.Column="0" Stretch="Fill" />
-                            <!--<Image Name="Image1" Grid.Row="0" Grid.Column="0" Stretch="Fill" Visibility="Collapsed" />
-
-                            <TextBlock Name="txtQRCode" Grid.Row="1" Grid.Column="0" Foreground="White" Margin="10, 20, 10, 0" HorizontalAlignment="Center" TextAlignment="Center" FontWeight="Bold" FontSize="12" />
-                            <TextBlock Name="txtCheckTime" Grid.Row="1" Grid.Column="0" Foreground="White" Margin="10, 5, 10, 10" HorizontalAlignment="Center" TextAlignment="Center" FontSize="10" />-->
-
                         </StackPanel>
 
                         <!--<GroupBox Header="Kết quả vận hành trong ngày" BorderBrush="Aquamarine" Background="{x:Null}" >
@@ -195,7 +190,7 @@
                         </GroupBox>-->
                     </Grid>
                     <Grid Grid.Row="1"  Background="#566895">
-                        <StackPanel>
+                        <StackPanel Width="400">
 
                             <Image Name="Image1" Grid.Row="0" Grid.Column="0" Stretch="Fill" Visibility="Collapsed" />
 
