--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -9,7 +9,7 @@
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         FontFamily="{DynamicResource MaterialDesignFont}"
         Title="Phầm mềm giám sát phân loại sản phẩm" 
-        WindowStartupLocation="CenterScreen" 
+        WindowStartupLocation="CenterScreen" Closed="Window_Closed"
        Height="900" Width="1650" Loaded="Window_Loaded">
     <Grid>
         <Grid.ColumnDefinitions>
